--- a/style.css
+++ b/style.css
@@ -19,22 +19,64 @@ body * {
   line-height: 160%
 }
 
+header {
+  margin-top: 32px;
+  height: calc(120px + 32px);
+}
+
+header div {
+  width: 120px;
+  margin: auto;
+  background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+  border-radius: 50%;
+
+  display: flex;
+  padding: 4px;
+
+  transition: transform .3s;
+  animation: fromTop .7s .2s backwards;
+}
+
+header div:hover {
+  transform: scale(1.1);
+}
+
+header img {
+  width: 100%;
+  border-radius: 50%;
+}
+
 
 main {
   max-width: 580px;
   width: 90%;
-  margin: auto;
+  margin: 32px auto;
 
   display: grid;
   gap: 24px;
-  margin-top: 32px;
+}
+
+main section {
+  animation: fromBottom .7s backwards;
+}
+
+main section:nth-child(1) {
+  animation-delay: 0;
+}
+
+main section:nth-child(2) {
+  animation-delay: .4s;
+}
+
+main section:nth-child(3) {
+  animation-delay: .8s;
 }
 
 section {
   color: white;
-   background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
-   padding-top: 4px;
-   border-radius: 10px;
+  background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
+  padding-top: 4px;
+  border-radius: 10px;
 }
 
 section div {
@@ -60,6 +102,14 @@ section ul {
   margin-top: 24px;
 }
 
+section ul li {
+  transition: transform .3s;
+}
+
+section ul li:hover {
+  transform: scale(1.1);
+}
+
 .games-list img {
   width: 90px;
   border-radius: 8px;
@@ -68,4 +118,32 @@ section ul {
 .channel-list img {
   border-radius: 50%;
   width: 70px;
+  border: 1px solid #443E54;
+}
+
+/* ANIMATION */
+
+
+@keyframes fromTop {
+  from {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fromBottom {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
